# tg-solana-token-api

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
dockerfile/: server  sub_tg  worker
src/: client.py  server.py  sub_tg.py  worker.py
